cmake_minimum_required(VERSION 3.21)
project(TextEditor)

set(CMAKE_CXX_STANDARD 20)

add_executable(TextEditor CS112-203-2nd-S25-20210508-20210544-20210563-A4-TextEditorApp.cpp CS112-203-2nd-S25-20210508-20210544-20210563-A4-TextEditorFunctions.cpp CS112-203-2nd-S25-20210508-20210544-20210563-A4-TextEditorFunctions.h)
